# rawr

./: .gitignore  Cargo.toml  Herebyfile.mjs  README.md  bun.lockb  mprocs.yaml  package.json  rust-service.rs
crates/codegen/: Cargo.toml  build.rs
crates/rawr/: Cargo.toml
crates/rawr/macros/: Cargo.toml
crates/rawr/macros/src/: lib.rs
crates/rawr/src/: lib.rs  schema.rs
crates/schemas/src/: enumeration.rs  lib.rs  module.rs  structure.rs
crates/schemas/src/module/: nested_module.rs
rawr-rust/: Cargo.toml
rawr-rust/macros/: Cargo.toml
rawr-rust/macros/src/: lib.rs  serde.rs
rawr-rust/src/: lib.rs  schema.rs  service.rs  services.rs
rawr-rust/src/codegen/: typescript.rs
rawr-rust/src/service/: channel.rs
rawr-typescript/: package.json
rawr-typescript/src/: lib.ts
snapshot/expected/schemas/module/: index.ts
snapshot/expected/schemas/structure/: index.ts
src/: diff.rs  main.rs
test-codegen/: README.md
test-codegen/harness/: Cargo.toml
test-codegen/harness/src/: diff.rs  main.rs
test-codegen/schemas/: Cargo.toml
test-codegen/schemas/schemas_subcrate/: Cargo.toml
test-codegen/schemas/schemas_subcrate/src/: lib.rs
test-codegen/schemas/src/: enumeration.rs  lib.rs  module.rs  structure.rs
test-codegen/schemas/src/module/: nested_module.rs
test-codegen/snapshots/: .gitignore  tsconfig.json
test-codegen/snapshots/typescript-expected/codegen_harness/: index.ts
test-service/harness/: Cargo.toml
test-service/harness/src/: main.rs
test-service/rust-client/: Cargo.toml
test-service/rust-client/src/: main.rs
test-service/rust-server/: Cargo.toml
test-service/rust-server/src/: main.rs
test-service/typescript-client/: package.json
test-service/typescript-client/src/: index.ts
test-service/typescript-server/: README.md  bun.lockb  package.json
tests/codegen-tests/harness/: Cargo.toml
tests/codegen-tests/harness/src/: main.rs
tests/codegen-tests/snapshots/: .gitignore  tsconfig.json
tests/schemas/: Cargo.toml
tests/schemas/schemas_subcrate/: Cargo.toml
tests/schemas/schemas_subcrate/src/: lib.rs
tests/schemas/src/: array_like.rs  enumeration.rs  lib.rs  module.rs  result.rs  sequence.rs  service.rs  structure.rs
tests/schemas/src/module/: nested_module.rs
tests/service-tests/: .gitignore  README.md  generated.ts  manual-codegen.ts
tests/service-tests/harness/: Cargo.toml
tests/service-tests/harness/src/: main.rs
tests/service-tests/run_codegen/: Cargo.toml
tests/service-tests/run_codegen/src/: main.rs
tests/service-tests/rust/: Cargo.toml
tests/service-tests/rust-client/: Cargo.toml
tests/service-tests/rust-client/src/: main.rs
tests/service-tests/rust-server/: Cargo.toml
tests/service-tests/rust-server/src/: main.rs
tests/service-tests/rust/src/: main.rs
tests/service-tests/typescript/: README.md  bun.lockb  package.json
tests/service-tests/typescript-client/: package.json
tests/service-tests/typescript-client/src/: index.ts
tests/service-tests/typescript-server/: package.json
tests/service-tests/typescript-server/src/: index.ts
tests/service-tests/typescript/src/: generated.ts  (+1 more)
(+12 files in other folders)
