[workspace]
resolver = "2"
members = [
    "rawr-rust",
    "test-codegen/harness",
    "test-service/harness",
    "test-service/rust-client",
    "test-service/rust-server",
]

[workspace.dependencies]
anyhow = "1.0.95"
colored = "2.2.0"
duct = "0.13.7"
env_logger = "0.11.6"
futures = "0.3"
log = "0.4.22"
rawr = { path = "rawr-rust" }
serde = "1.0.217"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26.1"
walkdir = "2.5.0"
