[package]
name = "codegen-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
rawr = { workspace = true }
schemas = { path = "../schemas" }

anyhow = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
glob = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
