[package]
name = "rawr_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[features]

[dependencies]
syn = { version = "2.0.91", optional = true }
quote = { version = "1.0.37", optional = true }
proc-macro2 = { version = "1.0.92", optional = true }
rand = { version = "0.8.4", optional = true }
