[package]
name = "rust_server"
version = "0.1.0"
edition = "2024"

[dependencies]
rawr = { workspace = true }
schemas = { workspace = true }

env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
